# lightspeed-core-rag-content

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Containerfile  Containerfile-cuda  Containerfile-gpu  Containerfile.konflux  Makefile  README.md  build-args-konflux-cuda.conf  build-args-konflux.conf  pyproject.toml  requirements-build.cuda.txt  requirements-build.txt  requirements.hashes.source.cuda.txt  requirements.hashes.source.txt  requirements.hashes.wheel.cpu.aarch64.txt  requirements.hashes.wheel.cpu.x86_64.txt  requirements.hashes.wheel.cuda.txt  requirements.hashes.wheel.pypi.cuda.aarch64.txt  requirements.hashes.wheel.pypi.cuda.base.txt  requirements.hashes.wheel.pypi.cuda.txt  requirements.hashes.wheel.pypi.cuda.x86_64.txt  requirements.hashes.wheel.pypi.txt  requirements.hashes.wheel.txt  requirements.hermetic.txt  requirements.overrides.cuda.txt  requirements.overrides.txt  requirements.txt  rpms.in.yaml  rpms.lock.yaml
.github/workflows/: build_and_push_dev.yaml  build_and_push_dev_cuda.yaml  pydocstyle.yaml
.tekton/: lightspeed-core-rag-content-c0ec3-pull-request.yaml  lightspeed-core-rag-content-c0ec3-push.yaml  lightspeed-core-rag-content-cpu-f176b-pull-request.yaml  lightspeed-core-rag-content-cpu-f176b-push.yaml  lightspeed-core-rag-content-d5cb9-pull-request.yaml  lightspeed-core-rag-content-d5cb9-push.yaml  rag-tool-pull-request-cuda.yaml  rag-tool-pull-request.yaml  rag-tool-push-cuda.yaml  rag-tool-push.yaml  syedriko-rag-tool-cuda-pull-request.yaml  syedriko-rag-tool-cuda-push.yaml
cuda/: cuda.repo  rpms.in.yaml  rpms.lock.yaml
ocp-product-docs-plaintext/4.17/welcome/: oke_about.txt
ocp-product-docs-plaintext/4.18/observability/monitoring/about-ocp-monitoring/: monitoring-stack-architecture.txt
ocp-product-docs-plaintext/4.19/installing/installing_bare_metal/: bare-metal-postinstallation-configuration.txt
ocp-product-docs-plaintext/4.19/observability/monitoring/about-ocp-monitoring/: monitoring-stack-architecture.txt
ocp-product-docs-plaintext/4.19/welcome/: oke_about.txt
scripts/: distance.py  download_embeddings_model.py  gen_containerfile_hermetic_sim.sh  generate-rpm-lock.sh  generate_embeddings.py  generate_packages_to_prefetch.py  konflux_requirements.sh  konflux_requirements_cuda.sh  list_wheel_requires_dist.py  query_rag.py  remove_pytorch_cpu_pyproject.py  run_hermeto_fetch_deps.sh  simulate_hermetic_build.sh  stage_hermetic_build_context.sh  verify_aarch64_hashes.py
scripts/cuda/: cuda_cloud_formation.yaml  install_cuda_rhel9_ec2.sh  provision_cuda_lab.sh
scripts/hermeto/: prefetch-konflux-cpu.json  prefetch-konflux-cuda.json  prefetch-pip-cpu.json  prefetch-pip-cuda.json
src/lightspeed_rag_content/: document_processor.py  image_builder.py  metadata_processor.py  okp.py  utils.py
src/lightspeed_rag_content/asciidoc/: __main__.py
src/lightspeed_rag_content/html/: __main__.py  html_reader.py
tests/: test_document_processor.py  test_document_processor_llama_index.py  test_document_processor_llama_stack.py  test_generate_embeddings.py  test_image_builder.py  test_metadata_processor.py  test_utils.py
tests/asciidoc/: test__main__.py  test_asciidoc_converter.py
tests/html_tests/: __init__.py  test__main__.py  test_html_reader.py
